# libwindow

./: APIREF  CMakeLists.txt  Makefile  README  meson.build  meson_options.txt
include/: window.h
src/: window.c  window.h  window_linux.c
